# nmdc-ontology

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  biosample_triad_report.tsv  biosample_triad_report_counts.tsv  data-vs-ontology-reports.Makefile  issue_template.md  maintenance.Makefile  mirror-catalog.xml  nmdco-classes.json  nmdco-full.owl  nmdco-non-classified.owl  nmdco.owl  projects.yaml  pyproject.toml  qc.Makefile  query.Makefile  triad_term_counts.tsv
assets/: SPECIFICITY_CONFIDENCE.tsv  additional-extracts.txt  alignment-linkml-schemas-owl-ontologies.md  biome-class-annotations.csv  biome_subsets_accepted.yaml  env_local_scale_results.yaml  environmental-material-class-annotations.csv  environments_with_no_biome_mappings.raw.yaml.txt  envo_subset_non_host_env_local_scale.csv  envo_subset_non_host_env_local_scale.rq  envo_subset_non_host_env_local_scale.tsv  envo_subset_non_host_env_local_scale_term_list.txt  extension_report.yaml  from_envo_ubergraph_filtered.tsv  from_envo_ubergraph_object_usage.tsv  junk  material_environment_built_environment_mappings_raw.yaml.txt  mixs_context_subsets_example.json  mixs_context_subsets_example.yaml  mixs_context_subsets_schema.yaml  mixs_context_subsets_schema_batchwise.yaml  mixs_context_subsets_schema_batchwise_examples.yaml  mixs_context_subsets_schema_batchwise_results.json  mixs_context_subsets_schema_batchwise_results.tsv  mixs_context_subsets_schema_batchwise_results.yaml  mixs_environments_env_materials_subsets.yaml.txt  parse_robot_diff.tsv  report_envo_biome_annotations.yaml
data-vs-ontology-reports/: envo-all-classes.txt  envo-biomes.txt  envo-id-ranges-report.tsv  fma-usage-report.tsv  nmdco-envo-classes-with-id-owner.tsv  problematic_triad_summary.yaml  problematic_triads.tsv  report-id-ranges.tsv
data-vs-ontology-sparql/: report-class-ids.rq
local/: .env.template
nmdc_ontology/: .~lock.inferences.tsv#  assertions.tsv  find_biosamples_with_problematic_triads.py  find_nmdc_envo_terms.py  from_envo_ubergraph.py  inferences.tsv  iterative_mixs_environments_to_envo_biomes_by_claude.py  iterative_mixs_environments_to_envo_materials_by_claude.py  large_context_subsetter.py  large_string.txt  mixs_environments_extensions_to_envo_envirnmental_materials_by_claude.py  mixs_environments_to_biomes_by_claude.py  mixs_environments_to_envo_classes_by_claude.py  parse_robot_diff.py  pivot_subset_mappings.py  projection_over_implicit_subclasses.py  report_envo_biome_annotations.py  report_envo_environmental_material_annotations.py  report_id_ranges.py  report_instantiated_traids.py  report_mixs_extensions.py  schemasheets-template-mixs-extensions-filter.py  specificity_interleaver.py
ols-docker/: Dockerfile  README.md  docker-bash.sh  docker-build.sh  docker-nersc.sh  docker-remove.sh  docker-run.sh  docker-stop.sh  ols-config.yaml
qc-reports/: .~lock.report-cycles.tsv#  biosample-triad-counts.tsv  biosample-triad-report.tsv  envo-environmental-materials.txt  envo-id-ranges-report.tsv  nmdco-envo-classes-with-id-owner.tsv  problematic_triad_summary.yaml  problematic_triads.tsv  report-asserted-equivalencies.tsv  report-class-ids.tsv  report-cycles.tsv  report-id-ranges.tsv  report-unlabelled-classes.tsv
qc-sparql/: report-asserted-equivalencies.rq  report-cycles.rq  report-id-ranges.rq  report-unlabelled-classes.rq
subset-files/: astronomical-body-parts-and-manufactured-products.tsv  (+1 more)
(+62 files in other folders)
