[tool.poetry]
name = "nmdc-ontology"
version = "0.1.0"
description = "Build tools for the NMDC Ontology, a colelction of OBO foundry terms that can be used to annotate NMDC biosamples."
authors = ["Mark A. Miller <MAM@lbl.gov>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oaklib = "^0.5.25"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report-instantiated-traids = "nmdc_ontology.report_instantiated_traids:main"
report-id-ranges = "nmdc_ontology.report_id_ranges:generate_id_ranges"
report-nmdco-envo-classes-by-id-owners = "nmdc_ontology.find_nmdc_envo_terms:filter_class_nodes"
find-biosamples-with-problematic-triads = "nmdc_ontology.find_biosamples_with_problematic_triads:validate_biosamples"

