[tool.poetry]
name = "nmdc-ontology"
version = "0.1.0"
description = "Build tools for the NMDC Ontology, a colelction of OBO foundry terms that can be used to annotate NMDC biosamples."
authors = [
  "Bill Duncan <wdduncan@gmail.com>",
  "Mark A. Miller <MAM@lbl.gov>"
]

license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oaklib = "^0.5.25"
pyarrow = "^15.0.0"
anthropic = "^0.21.1"
python-dotenv = "^1.0.1"
setuptools = "^69.2.0"
google-cloud-aiplatform = "^1.48.0"
beautifulsoup4 = "^4.12.3"
linkml = "^1.7.8"
linkml-runtime = "^1.7.5"
llm = "^0.13.1"
schemasheets = "^0.2.1"
csvkit = "^1.5.0"
sparql-dataframe = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
find-biosamples-with-problematic-triads = "nmdc_ontology.find_biosamples_with_problematic_triads:validate_biosamples"
mixs-environments-to-envo-classes-by-claude = "nmdc_ontology.mixs_environments_to_envo_classes_by_claude:main"
report-envo-biome-annotations = "nmdc_ontology.report_envo_biome_annotations:main"
report-envo-environmental-material-annotations = "nmdc_ontology.report_envo_environmental_material_annotations:main"
report-id-ranges = "nmdc_ontology.report_id_ranges:generate_id_ranges"
report-instantiated-traids = "nmdc_ontology.report_instantiated_traids:main"
report-mixs-extensions = "nmdc_ontology.report_mixs_extensions:main"
report-nmdco-envo-classes-by-id-owners = "nmdc_ontology.find_nmdc_envo_terms:filter_class_nodes"
